# esrafel

./: .gitignore  Cargo.toml  README.md
esrafel-gtk4/: .gitignore  Cargo.toml  README.md
esrafel-gtk4/src/: about.rs  main.rs  params.rs
esrafel-gtk4/src/nuc_object/: mod.rs
libesrafel/: Cargo.toml  README.md
libesrafel/docs/: eprft.org
libesrafel/src/: eprft.rs  io.rs  lib.rs
oxesrafel/: Cargo.toml  README.md  pyproject.toml
oxesrafel/src/: iof.rs  lib.rs  nuc.rs  par.rs  rad.rs  sim.rs
oxesrafel/tests/: test_get_ascii.py  test_get_simpar.py  test_json_pars.py  test_loading.py  test_nucleus.py  test_param.py  test_print_simpar.py  test_radical.py  test_sim_from_simpar.py  test_sim_plot.py  test_sim_rads.py  test_simulator.py
oxesrafel/tests/data/: cs-example-acn.sim  na-example-acn.txt  sr-example-acn.sim
src/: about.rs  chem.rs  draw.rs  drawers.rs  esr_io.rs  logger.rs  main.rs  params.rs  preferences.rs  shortcuts.rs  sim.rs
src/nuc_list_box_row/: imp.rs  mod.rs
src/nuc_object/: imp.rs  mod.rs
src/nuc_object_model/: imp.rs  mod.rs
src/row_data/: imp.rs  mod.rs
